feat: Adding a enterprise profile to all modules (#476)
This pull request adds an enterprise profile to all Java modules and
includes the Nearby Selection configuration in the VRP module.

Some minor changes have been included regarding the nomenclature of the
test methods, and a new integration test for enterprise native mode is
now part of the CI pipeline.